--- a/src/main/resources/templates/listeetudiantinfiliere.html
+++ b/src/main/resources/templates/listeetudiantinfiliere.html
@@ -12,7 +12,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Liste Filiere</title>
+  <title>Liste Etudiants</title>
 
 
 
