--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -275,7 +275,7 @@
                     <li class="nav-item dropdown no-arrow">
                         <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            <span class="mr-2 d-none d-lg-inline text-info-600 small"
+                            <span class="mr-2 d-none d-lg-inline text-info "
                                   th:text="${#authentication.name}"></span>
                             <img class="img-profile rounded-circle" th:src="@{/img/undraw_profile.svg}">
                         </a>
